modules/security/main.tf
# Create a security group for vpc
resource "aws_security_group" "pub_sg" {
  name        = "alb_sg"
  description = "Allow HTTP/S inbound traffic from igw"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description = "HTTP access"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS accessC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_inbound_web_traffic"
  }
}
